# vTrade

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  backtest.ipynb  docker-compose.yml  pyproject.toml  report.html  requirements.txt  run_vtrade.sh  setup.py  signal_scanner.py  strategy.ipynb  strategy.py  utils.py  vtrade.py
.github/workflows/: ci_cd.yml  docker-build-push.yml
backtesting/: __init__.py  backtest.ipynb  backtesting.py
common/: __init__.py  ids.py
dash_components/: __init__.py  dash_backtesting.py  dash_balance_sheet.py  dash_bb.py  dash_cash_flow.py  dash_checklist.py  dash_crossing_ma.py  dash_income_statement.py  dash_rsi.py  dash_tabs.py  db.py  register_callbacks.py
dash_graph/: __init__.py  components.py  crossing_ma.py  dash_backtesting.py  dash_crossing_ma.py  plot_graphs.py
fundamental/: __init__.py  balance_sheet.py  cash_flow.py  common.py  financial_report.py  financial_statement.py  fundamental.py  income_statement.py
optimizer/: crossing_ma.py  optimizer.ipynb  optimizer.py
scanner/: scan.py  signal_scanner.py
strategy/: __init__.py  bollinger_bands.py  crossing_ma.py  rsi.py  strategy.ipynb  strategy.py  vtrade.py
tests/: common.py  e2e_test.py  test_e2e.py  test_e2e_fa.py  test_e2e_ta.py
utils/: __init__.py  comm_interface.py  data_fetch.py  utils.py  vtrade.py
