[project]
name = "vtrade"
version = "0.1.0"
description = "Trust the Algorithms"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "aiohttp==3.13.4",
    "dash==4.1.0",
    "dash-bootstrap-components==1.7.1",
    "dotenv==0.9.9",
    "gunicorn>=25.3.0",
    "loguru==0.7.3",
    "numpy==2.2.3",
    "plotly==6.0.0",
    "polars==1.22.0",
    "pydantic>=2.11.10",
    "pytest-html>=4.2.0",
    "pytest-playwright>=0.7.2",
    "python-dotenv==1.0.1",
    "testcontainers>=4.14.2",
    "websockets>=15.0.1",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
